feat: register endpoint (wip)
