# schemas/user.go
@@ -1,0 +1,8 @@
+package schemas
+
+type Register struct {
+	Username string `json:"username" binding:"required"`
+	Name     string `json:"name" binding:"required"`
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
